<resources>
    <string name="app_name">AllReader</string>
    <string name="recent_files">Recent Files</string>
    <string name="browse_files">Browse Files</string>
    <string name="supported_formats">PDF, EPUB, Excel, Images</string>
    <string name="pick_file">Pick File</string>
    <string name="settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="font_size">Font Size</string>
    <string name="clear_history">Clear History</string>
    <string name="file_icon">File Icon</string>
    <string name="image_description">Image View</string>
    <string name="home">Home</string>
    <string name="files">Files</string>
    <string name="nav_settings">Settings</string>

</resources>
